[SHOP] Updated not_logged.php

--- a/src/shop/not_logged.html
+++ b/src/shop/not_logged.html
@@ -7,6 +7,6 @@
 	<link rel="stylesheet" type="text/css" href="../assets/css/app.css"/>
 </head>
 <body>
-	<p>You're not an admin or you're not connected !</p>
+	<p>You're not connected !</p>
 </body>
 </html>
